# cargo-regress

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  action.yml
.github/workflows/: binary-size.yml  ci.yml  release.yml
crates/cargo-regress/: Cargo.toml
crates/cargo-regress/src/: build.rs  cli.rs  config.rs  main.rs
crates/cargo-regress/src/commands/: baseline.rs  diff.rs  explain.rs  init.rs  mod.rs  snapshot.rs  tui.rs  watch.rs
crates/regress-core/: Cargo.toml
crates/regress-core/benches/: diff_bench.rs
crates/regress-core/src/: lib.rs
crates/regress-core/src/binary/: mod.rs  parser.rs  symbol.rs
crates/regress-core/src/causal/: dep_graph.rs  lock_diff.rs  mod.rs
crates/regress-core/src/classify/: derive_support.rs  hidden_data.rs  mod.rs  monomorph.rs
crates/regress-core/src/diff/: engine.rs  grouping.rs  mod.rs
crates/regress-core/src/suggest/: mod.rs  rules.rs  rules.toml
crates/regress-core/tests/: integration.rs  realistic_symbols.rs
crates/regress-render/: Cargo.toml
crates/regress-render/src/: github.rs  gitlab.rs  html.rs  html_template.html  json.rs  lib.rs  sarif.rs  terminal.rs
tests/fixtures/bloat-dep/: Cargo.toml
tests/fixtures/bloat-dep/src/: main.rs
tests/fixtures/bloat-derive/: Cargo.toml
tests/fixtures/bloat-derive/src/: main.rs
tests/fixtures/bloat-mono/: Cargo.toml
tests/fixtures/bloat-mono/src/: main.rs
tests/integration/: regression_tests.rs
