[workspace]
members = [
    "crates/cargo-regress",
    "crates/regress-core",
    "crates/regress-render",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Chahine Ben Lahcen <chahine.benlahcen@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chahine-tech/cargo-regress"
homepage = "https://github.com/Chahine-tech/cargo-regress"

[workspace.dependencies]
object = { version = "0.36", default-features = false, features = ["read"] }
rustc-demangle = "0.1"
git2 = { version = "0.19", default-features = false }
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4"
tabled = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
toml = { version = "0.8", default-features = false, features = ["parse"] }
ratatui = "0.30"
crossterm = "0.28"
regress-core = { path = "crates/regress-core" }
regress-render = { path = "crates/regress-render" }
