[package]
name = "regress-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
object.workspace = true
rustc-demangle.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
